// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Create User Controller Snapshot Test database error → 500 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while saving new user.Try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Create User Controller Snapshot Test delete expired unverified user and create new 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while saving new user.Try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Create User Controller Snapshot Test for missing fields 1`] = `
{
  "body": {
    "message": "Please fill all data correctly.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create User Controller Snapshot Test for password mismatch 1`] = `
{
  "body": {
    "message": "Oops! Your passwords don't match.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create User Controller Snapshot Test successful user creation 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while saving new user.Try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Create User Controller Snapshot Test user already exists 1`] = `
{
  "body": {
    "message": "Looks like someone already registered with that username or email.",
    "success": false,
  },
  "status": 400,
}
`;
